<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="org.cursoandroid.applicationbmi.calculaindicemasa3.MainActivity">


        <TextView
            android:text="@string/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />

        <TextView
            android:text="@string/IngresaMasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_marginTop="88dp"
             />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <EditText
                android:id="@+id/inputAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingresa_tu_altura" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="139dp"
            >

            <EditText
                android:id="@+id/idTextoPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingresa_tu_peso_en_kg" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_marginTop="2dp"
            android:onClick="calculaBMI"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textResultado"
            android:textAppearance="@style/Base.V7.Theme.AppCompat.Light.Dialog"
            />
    </LinearLayout>
</ScrollView>